@@ -19,9 +19,6 @@ omnitech-angels-omnicium-tungsten-alloy-smelting=Omnifram smelting
 omnimatter=Omnimatter
 omnic-water-distilation=Omnilation
 
-[item-group-description]
-compressor-compress=Contains the omnitractor recipes.
-
 [item-name]
 omnite=Omnite
 crushed-omnite=Crushed Omnite
@@ -50,6 +47,7 @@ omniphlog=Omniphlog Mk__1__
 burner-omniphlog=Burner Omniphlog
 steam-omniphlog=Steam Omniphlog
 block-omni=Omni Block __1__
+crude=Crude __1__
 
 [item-description]
 omnite=meep
@@ -77,6 +75,7 @@ omnisludge=Omni Sludge
 crushing-omnite-by-hand=Hand Crushing Omnite
 omniphlog=Omniphlog Mk__1__
 omnilation=__1__ omnilation
+crude-refinement= Crude __1__ refinement
 
 [recipe-description]
 base_impure=Basic level of extraction.
@@ -129,7 +128,6 @@ omnimatter-beginner-multiplier=Beginner help
 omnimatter-linear-science-packs=Science pack cost scales linearly
 omnimatter-rocket-locked=Rocket silo locked behind extraction
 omnimatter-science-pack-constant=Science pack constant
-omnimatter-mining-fluids=Adopt required mining fluids for extractions
 
 [mod-setting-description]
 omnimatter-infinite-omnic-acid=If enabled, infinite omnite will require omnic acid to be mined
@@ -144,4 +142,3 @@ omnimatter-beginner-multiplier=Early Tech Cost Multiplier: Multiply all techs pr
 omnimatter-linear-science-packs=True: science pack cost scales linearly. False: science pack cost scales exponentially.
 omnimatter-rocket-locked=The rocket silo will be locked behind all extraction technologies.
 omnimatter-science-pack-constant=Determines the science pack costs of sciences as it goes up, lower bound is 0 for linear and 1 for non-linear.
-omnimatter-mining-fluids=Extraction recipes of ores that normally require a mining fluid require that fluid aswell.
