@@ -1,10 +1,12 @@
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.22
 Date: ????
+  Features:
+    - Ores that normally require a fluid to mine cant be extracted from omnite directly anymore
+      The recipe now outputs a crude version of the ore which needs to be refined with the mining
+      fluid to get the proper ore
   Changes:
     - Removed the setting to enable/disable infinite omnite. This can be done in the map generator
-    - Extraction recipes of ores that normally require a fluid to mine now require that fluid
-      aswell by default. A setting to disable this has been added.
     - Properly order all extraction recipes by tier
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.21
